--- a/footer.html
+++ b/footer.html
@@ -1,66 +1,66 @@
 <footer class="footer-interior footer" style="background: #000">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="footer-interior__column col-6 col-xl-3">
-          <a href="index.html" style="position: relative; width: 100%; height: 100%;"><img src="img/logo_white.svg" alt="Pickture logo" style="width: 60%; position: absolute; top:50%; transform: translateY(-50%);"></a>
-        </div>
-        <div class="footer-interior__column col-6 col-xl-3">
-          <div class="footer-interior__group-title">Company</div>
-          <ul class="footer-interior__list">
-            <li class="footer-interior__list-item">
-              <a class="footer-interior__list-link" href="http://zipshowkorea.com/intro.html">About</a>
-            </li>
-            <li class="footer-interior__list-item">
-              <a class="footer-interior__list-link" href="contact.html">Contact</a>
-            </li>
-            <li class="footer-interior__list-item">
-              <a class="footer-interior__list-link" href="http://zipshowkorea.com/work.html">Career</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-interior__column col-6 col-xl-3">
-          <div class="footer-interior__group-title">Get In Touch</div>
-          <p>
-            인천 부평구 부평대로 293 부평테크시티 908호, 집쇼코리아
-          </p>
-          <p>
-            <a href="mailto:zipshowkorea@gmail.com">zipshowkorea@gmail.com</a>
-          </p>
-          <p>070-5180-0011</p>
-        </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="footer-interior__column col-6 col-xl-3">
+        <a href="index.html" style="position: relative; width: 100%; height: 100%;"><img src="img/logo_white.svg" alt="Pickture logo" style="width: 60%; position: absolute; top:50%; transform: translateY(-50%);"></a>
       </div>
-      <div class="footer-interior__bottom">
-        <div class="row">
-          <div class="footer-interior__column col-12 col-sm-6">
-            <div class="footer-interior__copyright">© 2020
-              <strong>Zipshowkorea.</strong>
-              All Rights Reserved.
-              <a href="page-404.html"></a>
-            </div>
+      <div class="footer-interior__column col-6 col-xl-3">
+        <div class="footer-interior__group-title">Company</div>
+        <ul class="footer-interior__list">
+          <li class="footer-interior__list-item">
+            <a class="footer-interior__list-link" href="http://zipshowkorea.com/intro.html">About</a>
+          </li>
+          <li class="footer-interior__list-item">
+            <a class="footer-interior__list-link" href="contact.html">Contact</a>
+          </li>
+          <li class="footer-interior__list-item">
+            <a class="footer-interior__list-link" href="http://zipshowkorea.com/work.html">Career</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-interior__column col-6 col-xl-3">
+        <div class="footer-interior__group-title">Get In Touch</div>
+        <p>
+          인천 부평구 부평대로 293 부평테크시티 908호, 집쇼코리아
+        </p>
+        <p>
+          <a href="mailto:zipshowkorea@gmail.com">zipshowkorea@gmail.com</a>
+        </p>
+        <p>070-5180-0011</p>
+      </div>
+    </div>
+    <div class="footer-interior__bottom">
+      <div class="row">
+        <div class="footer-interior__column col-12 col-sm-6">
+          <div class="footer-interior__copyright">© 2020
+            <strong>Zipshowkorea.</strong>
+            All Rights Reserved.
+            <a href="page-404.html"></a>
           </div>
-          <div class="footer-interior__column col-12 col-sm-6 col-lg-3 offset-lg-3">
-            <div class="footer-interior__socials">
-              <a class="footer-interior__social icofont-twitter" href="page-404.html">
-                <div class="visually-hidden">twitter</div>
-              </a>
-              <a class="footer-interior__social icofont-facebook" href="page-404.html">
-                <div class="visually-hidden">facebook</div>
-              </a>
-              <a class="footer-interior__social icofont-behance" href="page-404.html">
-                <div class="visually-hidden">behance</div>
-              </a>
-              <a class="footer-interior__social icofont-google-plus" href="page-404.html">
-                <div class="visually-hidden">google plus</div>
-              </a>
-              <a class="footer-interior__social icofont-linkedin" href="page-404.html">
-                <div class="visually-hidden">linkedin</div>
-              </a>
-            </div>
+        </div>
+        <div class="footer-interior__column col-12 col-sm-6 col-lg-3 offset-lg-3">
+          <div class="footer-interior__socials">
+            <a class="footer-interior__social icofont-twitter" href="page-404.html">
+              <div class="visually-hidden">twitter</div>
+            </a>
+            <a class="footer-interior__social icofont-facebook" href="page-404.html">
+              <div class="visually-hidden">facebook</div>
+            </a>
+            <a class="footer-interior__social icofont-behance" href="page-404.html">
+              <div class="visually-hidden">behance</div>
+            </a>
+            <a class="footer-interior__social icofont-google-plus" href="page-404.html">
+              <div class="visually-hidden">google plus</div>
+            </a>
+            <a class="footer-interior__social icofont-linkedin" href="page-404.html">
+              <div class="visually-hidden">linkedin</div>
+            </a>
           </div>
         </div>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
 </div>
 <!--JS-->
 <script src="assets/js/polyfill.min.js"></script>
@@ -79,8 +79,21 @@
 <script src="assets/js/TimelineLite.min.js"></script>
 <script src="assets/js/typed.min.js"></script>
 <script src="assets/js/vivus.min.js"></script>
+<!--Revolution JS-->
+<script src="assets/js/revolution/jquery.themepunch.tools.min.js"></script>
+<script src="assets/js/revolution/jquery.themepunch.revolution.min.js"></script>
+<!--Revolution Panorama Add-On JS-->
+<script src="assets/js/revolution-addons/panorama/three.min.js"></script>
+<script src="assets/js/revolution-addons/panorama/revolution.addon.panorama.min.js"></script>
+<!-- Revolution Panorama extensions JS (Load Extensions only on Local File Systems !  The following part can be removed on Server for On Demand Loading)-->
+<script src="assets/js/revolution/extensions/revolution.extension.actions.min.js"></script>
+<script src="assets/js/revolution/extensions/revolution.extension.carousel.min.js"></script>
+<script src="assets/js/revolution/extensions/revolution.extension.kenburn.min.js"></script>
+<script src="assets/js/revolution/extensions/revolution.extension.layeranimation.min.js"></script>
+<script src="assets/js/revolution/extensions/revolution.extension.migration.min.js"></script>
+<script src="assets/js/revolution/extensions/revolution.extension.navigation.min.js"></script>
+<script src="assets/js/revolution/extensions/revolution.extension.parallax.min.js"></script>
+<script src="assets/js/revolution/extensions/revolution.extension.slideanims.min.js"></script>
+<script src="assets/js/revolution/extensions/revolution.extension.video.min.js"></script>
 <!--Theme JS-->
 <script src="assets/js/theme.js"></script>
-</body>
-
-</html>
